--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ featured-image-source:
 # Social settings
 500px_url:
 facebook_url:
-github_url: 
+github_url: https://github.com/oceanspace/
 gitlab_url:
 googleplus_url:
 instagram_url:
-linkedin_url:
+linkedin_url: https://www.linkedin.com/in/oceanspace/
 pinterest_url:
 slack_url: 
 twitter_url:
